<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="369dp"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:layout_marginLeft="6dp"
            android:text="@string/item_informations_string"
            android:textAlignment="gravity"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="holder1" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/name_item_string" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/description_item_string" />

        <TextView
            android:id="@+id/floor"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/floor_item_string" />
        <TextView
            android:id="@+id/room"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/room_item_string" />

        <TextView
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/state_item_string" />

        <TextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/type_item_string" />

        <TextView
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/number_item_string" />

        <TextView
            android:id="@+id/idOperator"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/idOperator_item_string" />

        <TextView
            android:id="@+id/idWarehouse"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/idWarehouse_item_string" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <Button
                android:id="@+id/change_item_info"
                android:layout_width="167dp"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="10dp"
                android:text="@string/change_item_info_string"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delete_item"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/delete_item"
                android:layout_width="167dp"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="12dp"
                android:text="@string/delete_item_string"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/change_item_info" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</ScrollView>