<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/add_informations_string"
            android:textAlignment="gravity"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="holder1" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/name_item_string" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/description_item_string" />

        <EditText
            android:id="@+id/floor"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/floor_item_string" />
        <EditText
            android:id="@+id/room"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/room_item_string" />

        <EditText
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:hint="@string/state_item_string"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/type_item_string" />

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:inputType="number"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/number_item_string" />

        <EditText
            android:id="@+id/idOperator"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:inputType="number"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/idOperator_item_string" />

        <EditText
            android:id="@+id/idWarehouse"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:inputType="number"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/idWarehouse_item_string" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <Button
                android:id="@+id/modify_item"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/modify_item_string"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</ScrollView>